fix resettings of z-index

--- a/cms/static/cms/sass/components/_subnav.scss
+++ b/cms/static/cms/sass/components/_subnav.scss
@@ -289,10 +289,7 @@
         background-color: $gray-lighter;
     }
 
-    .cms-z-index-0 {
-        z-index: 0 !important;
-    }
-    .cms-z-index-999 {
-        z-index: 999 !important;
+    .cms-z-index-9999 {
+        z-index: 9999 !important;
     }
 }
